--- a/11Modules/02/index.html
+++ b/11Modules/02/index.html
@@ -45,7 +45,7 @@
     </div>
   </main>
 
-  <script typw="module" src="./js/app.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 
 </html> 
