--- a/1template-literals-expresiones/index.html
+++ b/1template-literals-expresiones/index.html
@@ -12,12 +12,12 @@
         console.log(`The name is ${name}`)
         console.log(`The name is ${29}`)
         console.log(`The name is ${'random tests'}`)
-        console.log(`The name is ${x = 'fergal'}`)
+        console.log(`The name is ${x = 'fergal'}`) // window.x
         console.log(`The name is ${(function name() { return 'Fer'})()}`)
         console.log(`The name is ${(function () { return 'Fern'})()}`)
         console.log(`The name is ${( () => { return 'Fer arrow'})()}`)
-        console.log(`The name is ${true && 'Fer Ternary'}`)
-        console.log(`The name is ${false ? 'Fer true' : 'Fer False'}`)
+        console.log(`The name is ${true && 'Fer Ternary'}`) // Ternary operators
+        console.log(`The name is ${false ? 'Fer true' : 'Fer False'}`) // Ternary operators
         console.log(`The name is ${['a', 'b'].map( (letter) => `${letter}-styled`)}`)
     </script>
 </body>
